# whalesbook

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  prod.Dockerfile  pyproject.toml
backend/app/: cli_options.py  config.py  docker.py  main.py  state.py
backend/app/services/: registry.py
backend/src/whalesbook/: cli_options.py  config.py  docker.py  main.py  schedule.py  server.py  state.py
backend/src/whalesbook/services/: cli_runner.py  registry.py
backend/tests/: README.md  compose.yml  conftest.py  test_docker.py  test_services.py  test_state.py
backend/tests/config/: config.yml  registry_htpasswd
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: HeaderComponent.vue  OutLink.vue
frontend/src/misc/: hey-api.ts
frontend/src/router/: index.ts
frontend/src/stores/: books.ts  counter.ts
frontend/src/utils/: state.ts
frontend/src/views/: BookView.vue  HomeView.vue
