[project]
name = "whalesbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio[trio]>=4.8.0",
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "pydantic-settings[yaml]>=2.8.1",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "INFO"
addopts = [
    "--import-mode=importlib",
]
